--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,75 @@
-body {
-  background-color: black;
+/*# sourceMappingURL=styles.css.map */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+.logo-nav {
+    height: 60px;
 }
 
-/*# sourceMappingURL=styles.css.map */
+nav {
+    background-color: black;
+}
+
+.navbar-nav .nav-link, .navbar-brand {
+    color: white !important;
+  }
+  
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+  }
+  
+  .fa-cart-shopping {
+    color: white !important;
+    margin-left: 7px;
+  }
+
+  .categorias {
+    & img {
+        max-width: 100%;
+    }
+    & P {
+        text-align: center;
+        font-size: 25px;
+        margin-top: 10px;
+    }
+  }
+  
+  .seccion-envio {
+    background-color: #32a854;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    & p {
+        padding: 10px;
+    }
+  }
+
+  .banners {
+    & img {
+        max-width: 100%;
+    }
+  }
+
+  .footer-1 {
+    background-color: black;
+    color: white;
+    text-align: center;
+  }
+
+  .redes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    font-size: 20px;
+  }
+  .footer-2 {
+    text-align: center;
+    margin-bottom: 30px;
+    & img {
+        height: 25px;
+    }
+  }
