--- a/css/styles.css
+++ b/css/styles.css
@@ -1,75 +1,111 @@
-/*# sourceMappingURL=styles.css.map */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Archivo: styles.scss */
+/* Estilos generales */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .logo-nav {
-    height: 60px;
+  height: 60px;
 }
 
 nav {
-    background-color: black;
+  background-color: black;
 }
 
 .navbar-nav .nav-link, .navbar-brand {
-    color: white !important;
-  }
-  
-  .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
-  }
-  
-  .fa-cart-shopping {
-    color: white !important;
-    margin-left: 7px;
-  }
+  color: white !important;
+}
 
-  .categorias {
-    & img {
-        max-width: 100%;
-    }
-    & P {
-        text-align: center;
-        font-size: 25px;
-        margin-top: 10px;
-    }
-  }
-  
-  .seccion-envio {
-    background-color: #32a854;
-    color: white;
-    text-align: center;
-    font-size: 20px;
-    & p {
-        padding: 10px;
-    }
-  }
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+}
 
-  .banners {
-    & img {
-        max-width: 100%;
-    }
-  }
+.fa-cart-shopping {
+  color: white !important;
+  margin-left: 7px;
+}
 
-  .footer-1 {
-    background-color: black;
-    color: white;
-    text-align: center;
-  }
+.categorias img {
+  max-width: 100%;
+}
+.categorias p {
+  text-align: center;
+  font-size: 25px;
+  margin-top: 10px;
+}
 
-  .redes {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    font-size: 20px;
-  }
-  .footer-2 {
-    text-align: center;
-    margin-bottom: 30px;
-    & img {
-        height: 25px;
-    }
-  }
+.seccion-envio {
+  background-color: #32a854;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+}
+.seccion-envio p {
+  padding: 10px;
+}
+
+.banners img {
+  max-width: 100%;
+}
+
+.footer-1 {
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+.redes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  font-size: 20px;
+}
+
+.footer-2 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.footer-2 img {
+  height: 25px;
+}
+
+.card {
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.card .card-body h5 {
+  transition: color 0.3s;
+}
+.card .card-body:hover h5 {
+  color: #2f994d;
+}
+
+.boton-conocermas {
+  display: inline-block;
+  padding: 10px 20px;
+  color: #fff;
+  background-color: #329940;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+.boton-conocermas:hover {
+  background-color: #257330;
+}
+
+/*# sourceMappingURL=styles.css.map */
